2005-01-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: don't use quote date
	* src/PeopleModel.py: remove BOLD
	* src/PeopleView.py: start of sorting support
	* src/WriteXML.py: use hlink for Witness
	* various: pychecker fixes
	* configure.in: bump up to 1.1.3, the "Splunge: this is a
	greate idea, but possibly lousy, and I'm not being indecisive"
	release

2005-01-15 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/KwordDoc.py: Register with paper capabilites.
	* src/docgen/PdfDoc.py: Register with paper capabilites.
	* src/docgen/RTFDoc.py: Register with paper capabilites.
	* src/const.py.in: Update copyright year.
	* NEWS: Update.

2005-01-14 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/GraphViz.py: Restore "Place/cause when no date"
	option that was available before in RelGraph; rename 'show
	family nodes' into 'sfn'.
	* src/plugins/StatisticsChart.py: Rename 'sort' into 'sortby'.

2005-01-13 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py: Typos.
	* src/plugins/WebPage.py: Typos.

	* src/plugins/BookReport.py: Switch to saving/restoring/registering
	items by the non-localized name.
	* src/plugins/GraphViz.py: Many various fixes.

2005-01-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/Check.py: Typos.

2005-01-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DateDisplay.py: Make DateDisplayEn inherit from DateDisplay, make
	DateDisplay handle only ISO dates
	* src/DateHandler.py: use DateDisplayEn for English languages, use
	DateDisplay for CJK
	* src/GrampsCfg.py: Don't do initial redisplay of Person List when
	dialog comes up, update dates dynamically when date format changes
	
2005-01-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels.py: Add Date and Place columns to Media model;
	Zip to Place model.
	* src/MediaView.py: Support for Date and Place columns.
	* src/PlaceView.py: Support for Zil column.
	* src/GrampsDbBase.py (get_place_column_order,