@@ -1,3 +1,7 @@
+2005-01-16 Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/Plugins.py (reload_plugins): Check for status.
+	* src/Report.py: pychecker fixes
+
 2005-01-15  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/EditPerson.py: don't use quote date
 	* src/PeopleModel.py: remove BOLD
